Fix z-index of .secondary-menu

--- a/news/css/styles.less
+++ b/news/css/styles.less
@@ -211,6 +211,8 @@
 
 
 .secondary-menu {
+  z-index: 4;
+
   overflow: hidden;
 
   height: 45px;
